Pass language of the menu when uploading menu for better OCR
